Bug 743819 - Only re-spellcheck new nodes on insertions, not everything; r=ehsan